# qemu-hijack-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/vcpkg-manifest/: vcpkg.json
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/common/: syscall_helper.h  wrapper_helper.h
src/fakesdl/: CMakeLists.txt  fakesdl.cpp  fakesdl.h
src/fakesdl2/: CMakeLists.txt  fakesdl2.cpp  fakesdl2.h
src/qemu-guest-entry/: CMakeLists.txt  qemu-guest-entry.cpp
